--- a/simpz/templates/invite.html
+++ b/simpz/templates/invite.html
@@ -202,7 +202,7 @@ $(document).ready(function() {
                                                 $("#tweet_msg").html("");
                                                 $("#tweet_text").val("TEST: Discounted Invite to my Friends.");
                                                 $("#tweet_invite_button").removeAttr("disabled");
-						display_friends_invite();
+						//display_friends_invite();
                                                                                                 
 					}
 				    }); 
@@ -303,7 +303,7 @@ function ajax_loader_image() {
 }
 
 
-function display_friends_invite() {
+function display_friends_invite_twitter() {
             $.ajax({
                     url: '/simpz/ajax/event_friend_not_attendees/{{event.id}}', 
                     dataType: "json",
@@ -343,6 +343,29 @@ function display_friends_invite() {
                    });
  
 }
+
+function display_friends_invite_facebook() {
+            $.ajax({
+                    url: '/simpz/ajax/facebook_friends', 
+                    dataType: "json",
+
+                    success: function(data){
+                        #alert(data);
+	        	     },
+                    beforeSend: function() {
+                        
+                    }
+                   });
+ 
+}
+
+$(document).ready(function() {
+// background processing
+setTimeout ( display_friends_invite_twitter(), 100 );
+setTimeout ( display_friends_invite_facebook(), 10 );
+   
+});
+
 </script>
 <!-- Content ends here -->
 {% endblock %}
