Adding initial blog vip code.

--- a/simpz/templates/footer.html
+++ b/simpz/templates/footer.html
@@ -1,12 +1,5 @@
-</div>
-<!--END main -->
-</div>	
-	<!-- END content -->
-</div>
 <!-- END main -->
-<div id="footer">
-	<p>Copyright 2010 Simpz Inc. All rights reserved.</p>
+<div class="footer">
+	<p>Copyright CollectiveVIP 2010</p>
 </div>
 <!-- END footer -->
-</body>
-</html>
