--- a/static/blueprint/screen.css
+++ b/static/blueprint/screen.css
@@ -28,12 +28,14 @@ ul, li {
 
 /* forms.css */
 label {
-	font-size: 16px;
+	font-size: 24px;
 	font-weight:bold;
 }
 fieldset {padding:1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
 legend {font-weight:bold;font-size:1.2em;}
-input[type=text], input[type=password], input.text, input.title, textarea, select {background-color:#fff;border:1px solid #bbb; font-size: 16px;}
+input[type=text], input[type=password], input.text, input.title, textarea, select {
+	background: url("../site_media/images/look/form_bg.png") no-repeat scroll center bottom transparent;
+;border:1px solid #bbb; font-size: 24px;}
 input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {border-color:#666;}
 input[type=text], input[type=password], input.text, input.title, textarea, select {margin:0.5em 0;}
 input.text, input.title {width:300px;padding:5px;}
