--- a/simpz/templates/blogvip.html
+++ b/simpz/templates/blogvip.html
@@ -41,10 +41,9 @@
                                 Hi {{user.name}}!
                                 <div id="status"><img src="images/gr.png"></div>
                         </div>
-                        <div id="invite-button"><img onClick="location.href='/simpz/login/'" src="images/button.png">
+                        <div id="invite-button"><img onClick="location.href='/simpz/login/'" src="images/look/get.png">
                         </div>
                         <div id="invitemsg">Login & see if your friends are going</div>
-
 
 {% endif%}
 
