--- a/static/overlay.css
+++ b/static/overlay.css
@@ -1,43 +1,46 @@
-.simple_overlay{
-	display:none;
-	z-index:10000;
-	border:1px solid #666;	
-	background-color:#FBF5EF;	 
-	width: 700px;
-	height: 430px;
-	padding: 35px;
-
-    /* CSS3 styling for latest browsers */	 
-    -moz-box-shadow:0 0 90px 5px #000; 
-    -webkit-box-shadow: 0 0 90px #000;
-}
-
-.simple_overlay .close{ 	
-		     background-image:url(images/close.png);
-		     position: absolute;
-		     right: 5px;
-		     top: 5px;  
-		     cursor:pointer;
-		     height:35px;
-		     width: 35px;
-}
-
-
 .overlay-blogger{
 	display:none;
 	z-index:10000;
-	border:1px solid #666;	
-	background-color:#333;	 
+	border:0px solid #666;	
+	background-color:#fff;	 
 	width: 700px;
-	height: 430px;
+	height: 400px;
 	padding: 35px;
 
     /* CSS3 styling for latest browsers */	 
     -moz-box-shadow:0 0 90px 5px #000; 
     -webkit-box-shadow: 0 0 90px #000;
-    -moz-border-radius:30px; 
-    -webkit-border-radius:30px;
+    -moz-border-radius:12px; 
+    -webkit-border-radius:12px;
 }
+
+.overlay-blogger .overlay-top{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 40px;
+	width: 100%;
+	background-image: url(images/overlaytop-bg.png);
+	/* CSS3 styling for latest browsers */	
+	-moz-border-radius-topleft: 12px;
+	-webkit-border-top-left-radius: 12px;
+	-moz-border-radius-topright: 12px;
+	-webkit-border-top-right-radius: 12px;
+	}
+
+.overlay-blogger .overlay-bot{
+	position: absolute;
+	top: 424px;
+	left: 0px;
+	height: 46px;
+	width: 100%;
+	background-image: url(images/overlaybot-bg.png);
+	/* CSS3 styling for latest browsers */	
+	-moz-border-radius-bottomleft: 12px;
+	-webkit-border-bottom-left-radius: 12px;
+	-moz-border-radius-bottomright: 12px;
+	-webkit-border-bottom-right-radius: 12px;
+	}
 
 .overlay-blogger .close{ 	
 		     background-image:url(images/close.png);
