overlay changes again

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -32,7 +32,7 @@
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
-<div class="overlay-top">Share to Get Discount</div>
+<div class="overlay-top"><p>Share to Get Discount</p></div>
 <div class="overlay-bot">hi</div>
   <div id="overlay-div-header-login">
     <h1>Header</h1>
