--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -32,7 +32,7 @@
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
-<div class="overlay-top"><p>Share to Get Discount</p></div>
+<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png"></div>
 <div class="overlay-bot">hi</div>
   <div id="overlay-div-header-login">
     <h1>Header</h1>
@@ -81,6 +81,48 @@
   {% endif %}
 </div>
 
+<!-- This is the Invite popup code -->
+<div id="invite_popup" class="simple_overlay">
+
+    <ul class="tabs">
+       <li><a href="#">Twitter</a></li>
+       <li><a href="#">Facebook</a></li>
+       <li><a href="#">Email</a></li>
+    </ul>
+
+
+    <!-- tab "panes" -->
+    <div class="panes">
+      <div>
+        <div class="twitterfriends">
+          <div id="tweet_title"><input type="text" id="tweet_text" maxlength="140" size="45"></input><button id="tweet_invite_button">Tweet Invite</button></div>
+          <div id="tweet_msg"></div>
+	  <a href="#" class="select_all_arrow"><img class="select_all_arrow" src="/simpz/site_media/images/arrow-down.gif"></img></a>
+	  <hr  class="horizontal_line "/>
+          <div id="twitlist"><img src="/simpz/site_media/images/ajax-loader.gif" /></div>
+        </div>
+        
+        <BR />
+        <input id="invite_dm_button" type="submit" class="button" value="Invite my friends" />
+      </div>
+    
+    
+      <div>
+	<div id="facebookfriends">
+	  
+	</div>
+      </div>
+    
+      <div>
+	<div id="emailfriends">
+	  
+	</div>
+      </div>
+    </div>
+      
+    </div>
+        
+    <BR />
 		
 
 <div id="attendees">
