--- a/static/overlay.css
+++ b/static/overlay.css
@@ -28,12 +28,9 @@
 	-webkit-border-top-right-radius: 12px;
 	}
 
-.overlay-blogger .overlay-top p{
-	padding-left: 10px;
-	color: #fff;
-	padding-top: 5px;
-	font-weight: bold;
-	font-size: 16px;
+.overlay-blogger .overlay-top img{
+	padding-left: 15px;
+	padding-top: 12px;
 	}
 
 
@@ -70,7 +67,7 @@
 
 #overlay-div-facebook-login {
 	background-color: white;
-	margin: 10px;
+	margin: 5px;
 	width: 46%;
 	float: left;
 	height: 100px;
@@ -80,7 +77,7 @@
 	background-color: yellow;
 	#position: relative;
 	float: right;
-	margin: 10px;
+	margin: 5px;
 	width: 46%;
 	height: 100px;
 }
