--- a/static/overlay.css
+++ b/static/overlay.css
@@ -2,7 +2,7 @@
 	display:none;
 	z-index:10000;
 	border:0px solid #666;	
-	background-color:#fff;	 
+	background-color:#000;	 
 	width: 700px;
 	height: 400px;
 	padding: 35px;
@@ -27,6 +27,12 @@
 	-moz-border-radius-topright: 12px;
 	-webkit-border-top-right-radius: 12px;
 	}
+
+.overlay-blogger .overlay-top img{
+	padding-left: 15px;
+	padding-top: 12px;
+	}
+
 
 .overlay-blogger .overlay-bot{
 	position: absolute;
@@ -54,14 +60,14 @@
 
 #overlay-div-header-login {
         background-color: white;
-        margin: 10px 20px 30px 20px;
+        margin: 10px 20px 130px 20px;
 	width: 640px;
 	text-align: center;
 }
 
 #overlay-div-facebook-login {
 	background-color: white;
-	margin: 10px;
+	margin: 5px;
 	width: 46%;
 	float: left;
 	height: 100px;
@@ -71,7 +77,7 @@
 	background-color: yellow;
 	#position: relative;
 	float: right;
-	margin: 10px;
+	margin: 5px;
 	width: 46%;
 	height: 100px;
 }
