--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -33,10 +33,8 @@
 <div id="overlay-blogger-login" class="overlay-blogger">
 
 <div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png"></div>
-<div class="overlay-bot">hi</div>
-  <div id="overlay-div-header-login">
-    <h1>Header</h1>
-  </div>
+<div class="overlay-bot"></div>
+<BR><BR>
 
   <div id="overlay-div-facebook-login">
     <script src="http://connect.facebook.net/en_US/all.js"></script>
@@ -69,7 +67,7 @@
   </div>
 
   {% if fbuser or user %}
-  <textarea rows="5" cols="97">HELLO THERE</textarea>
+  <textarea rows="5" cols="60">HELLO THERE</textarea>
   {% endif %}
 
   {%if fbuser %}
