--- a/static/overlay.css
+++ b/static/overlay.css
@@ -1,10 +1,10 @@
 .overlay-blogger{
 	display:none;
 	z-index:10000;
-	border:0px solid #666;	
-	background-color:#000;	 
-	width: 700px;
-	height: 400px;
+	border:0px;	
+	background-color:#fff;	 
+	width: 480px;
+	height: 246px;
 	padding: 35px;
 
     /* CSS3 styling for latest browsers */	 
@@ -36,7 +36,7 @@
 
 .overlay-blogger .overlay-bot{
 	position: absolute;
-	top: 424px;
+	top: 270px;
 	left: 0px;
 	height: 46px;
 	width: 100%;
@@ -60,8 +60,8 @@
 
 #overlay-div-header-login {
         background-color: white;
-        margin: 10px 20px 130px 20px;
-	width: 640px;
+        margin: 5px 5px 5px 5px;
+	width: 440px;
 	text-align: center;
 }
 
@@ -70,7 +70,7 @@
 	margin: 5px;
 	width: 46%;
 	float: left;
-	height: 100px;
+	height: 90px;
 }
 
 #overlay-div-twitter-login {
@@ -79,5 +79,5 @@
 	float: right;
 	margin: 5px;
 	width: 46%;
-	height: 100px;
+	height: 90px;
 }
