Fixing a bunch of stuff.

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -87,6 +87,11 @@
   <div class="discount-code">Discount Code: <br/><a href="http://www.eventbrite.come">3DESXV</a></div>  
 </div>
 
+<div id="dets"> 
+  <div id="event-title">Affiliate Summit 2010</div> 
+  <div id="info"><img src="/simpz/site_media/images/map-ico.png"> Marriot, Austin <div id="right">Tuesday, June 8, 2010 @ 1:30PM <img src="/simpz/site_media/images/cal-ico.png"></div></div> 
+  <div id="goog"><img src="/simpz/site_media/images/map.png"></div> 
+</div> 
 
 <div id="attendees">
 		<div id="msg">Current Guest List</div>
@@ -102,7 +107,9 @@
 	</div>
 
 </div>
-		
+
+	
+<!--	
 <div id="visual_map" style="width: 416px; height: 307px;" > </div>						
 	      
 <div id="dets">
@@ -111,7 +118,7 @@
 	<div id="goog"><img src="images/map.png"></div>
 </div>
 
-
+-->
 <script>
 
 
