--- a/static/base.css
+++ b/static/base.css
@@ -107,6 +107,17 @@ a:hover {
 	position: relative;
 }
 
+#attendees_thumbs {
+		  height: 100px;
+		  width: 100px;
+		  background-color: red;
+		padding-left: 100px; 
+position: absolute;
+ top: 100px;
+ left: 100px;
+ 
+}
+
 
 #dets
 {
