--- a/static/overlay.css
+++ b/static/overlay.css
@@ -11,7 +11,7 @@
     -moz-box-shadow:0 0 90px 5px #000; 
     -webkit-box-shadow: 0 0 90px #000;
     -moz-border-radius:12px; 
-    -webkit-border-radius:12px;
+   -webkit-border-radius:12px;
 }
 
 .overlay-blogger .overlay-top{
@@ -87,6 +87,12 @@
 	float: left;
 	height: 90px;
 	font-size: 15px;
+
+	/* CSS3 styling for latest browsers */	
+	-moz-border-radius-topleft: 12px;
+	-webkit-border-top-left-radius: 12px;
+	-moz-border-radius-topright: 12px;
+	-webkit-border-top-right-radius: 12px;
 }
 
 .overlay-blogger img {
@@ -102,6 +108,12 @@
 	width: 46%;
 	height: 90px;
 	font-size: 15px;
+
+	/* CSS3 styling for latest browsers */	
+	-moz-border-radius-topleft: 12px;
+	-webkit-border-top-left-radius: 12px;
+	-moz-border-radius-topright: 12px;
+	-webkit-border-top-right-radius: 12px;
 }
 
 #facebook-div-feed-update {
