Fixing up some stuff with Albert.

--- a/simpz/templates/blogvip.html
+++ b/simpz/templates/blogvip.html
@@ -117,8 +117,8 @@ $(document).ready(function() {
 					onLoad: function(event) {
                                                                                                 
 					},
-                                        top: 200,
-                                        left: 200,
+                                        //top: 200,
+                                        //left: 200,
 				    });
        $("#invite_button").overlay().load();
 
