--- a/simpz/templates/lanyard_base.html
+++ b/simpz/templates/lanyard_base.html
@@ -10,17 +10,19 @@
     <script type="text/javascript" src="/simpz/site_media/jquery.tools.min.js" ></script>
     <script type="text/javascript" src="/simpz/site_media/jquery.validate.js" ></script>
 
-	{% block  js_css_include %}{% endblock %}
 	
         <!-- BluePrint CSS -->
- 	<link rel="stylesheet" href="/simpz/site_media/blueprint/reset.css" type="text/css">
+ 	<!--<link rel="stylesheet" href="/simpz/site_media/blueprint/reset.css" type="text/css">-->
 	<link rel="stylesheet" href="/simpz/site_media/blueprint/grid.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/simpz/site_media/blueprint/grid.css" type="text/css" media="screen, projection">
+        <link rel="stylesheet" href="/simpz/site_media/2stylez.css" type="text/css" >
+
 	<!--[if lt IE 8]><link rel="stylesheet" href="/simpz/site_media/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	<!-- End BluePrint CSS -->
 
 	<link rel="stylesheet" href="/simpz/site_media/base.css" type="text/css">
 
-
+	{% block  js_css_include %}{% endblock %}
 
     
     <title>{% block title %} {% endblock %}</title>
