--- a/static/overlay.css
+++ b/static/overlay.css
@@ -6,6 +6,7 @@
 	width: 480px;
 	height: 246px;
 	padding: 35px;
+	margin: auto;
 
     /* CSS3 styling for latest browsers */	 
     -moz-box-shadow:0 0 90px 5px #000; 
@@ -153,6 +154,7 @@
 	height: 50px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	text-align: center;
 }
 
 #facebook-login {
