blog world mock up

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -87,15 +87,26 @@
   <div id="twitter-div-feed-update"><button id="twitter-feed-update">UPDATE TWITTER FEED</button></div>
   {% endif %}
 <!--<img id="twitter-feed-update" src="/simpz/site_media/images/tweet-invite.png">-->
-  <div class="discount-code">Discount Code: <br/><a href="http://www.eventbrite.come">3DESXV</a></div>  
+  <div class="discount-code">Discount Code: <br/><a href="http://www.eventbrite.com">3DESXV</a></div>  
 </div>
 
 <div id="dets"> 
-  <div id="event-title">Affiliate Summit 2010</div> 
-  <div id="info"><img src="/simpz/site_media/images/map-ico.png"> Marriot, Austin <div id="right">Tuesday, June 8, 2010 @ 1:30PM <img src="/simpz/site_media/images/cal-ico.png"></div></div> 
-  <div id="goog"><img src="/simpz/site_media/images/map.png"></div> 
+  <div id="event-title">BlogWorld 2010 Panel Spotlight</div>
+  <div id="detsbg">
+    <div id="info">Blogging Super Panel Live Feedback</div> 
+    <div id="goog"><img src="/simpz/site_media/images/speakers.png"></div>
+    <p>Is your blog optimizing its potential to make money? Find out! This panel of the top money making bloggers of all time will spend a few hours reviewing your blogs live. So get there early and step up to the mic and be ready to have your blog picked apart by the pros who know.<br><br>
+      John Chow, JohnChow.com<br>
+      Darren Rowse, Problogger.com<br>
+      Jeremy Shoemaker, ShoeMoney.com<br>
+      Brian Clark, Copyblogger.com<br>
+      Zac Johnson, ZacJohnson.com<br>
+    </p>
+    <div id="blogworld"><img src="/simpz/site_media/images/blogworld.png"></div>
+  </div>
+  <div id="detsfooter"></div>
 </div> 
-
+<div id="eventinfo"><b>Exhibits:</b> Oct 15-16 | <b>Conference:</b> Oct 14-16<br>Mandalay Bay Convention Center | Las Vegas Nevada</div>
 <div id="attendees">
 		<div id="msg">Current Guest List</div>
 
